added blurred effect, background image and improved the overall layout of the landing page (positioning, colouring, flex-box effects)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,10 @@
 
 en:
   hello: "Hello world"
+  # date:
+  #     simple_form:
+  #       default: "dd/mm/yyyy"
+  #       long: "dd MM, yyyy"
+  #     formats:
+  #       default: ! '%d/%m/%Y'
+  #       long: ! '%d %B, %Y'
